@@ -95,6 +95,7 @@
 ;; «.find-red-star-links»		(to "find-red-star-links")
 ;; «.find-eepitch-bullet-links»		(to "find-eepitch-bullet-links")
 ;; «.find-angg-es-links»		(to "find-angg-es-links")
+;; «.find-eevvideo-1stclass-links»	(to "find-eevvideo-1stclass-links")
 
 
 (require 'eev-env)
@@ -2662,6 +2663,52 @@ This function is used by `ee-0x0-upload-region'."
 ")
      )
    pos-spec-list))
+
+
+
+;; «find-eevvideo-1stclass-links»  (to ".find-eevvideo-1stclass-links")
+;; Skel: (find-find-links-links-new "eevvideo-1stclass" "c" "")
+;;  See: (find-eev "eev-videolinks.el" "first-class-videos")
+;;       (find-eev "eev-videolinks.el" "second-class-videos")
+;; Tests: (find-eevvideo-1stclass-links "eev2019")
+;;        (find-eevvideo-1stclass-links "eev2020")
+;;
+(defun find-eevvideo-1stclass-links (&optional c &rest pos-spec-list)
+"Visit a temporary buffer containing hyperlinks for a first-class video."
+  (interactive)
+  (setq c (or c "{c}"))
+  (apply
+   'find-elinks-elisp
+   `((find-eevvideo-1stclass-links ,c ,@pos-spec-list)
+     ;; Convention: the first sexp always regenerates the buffer.
+     (find-efunction 'find-eevvideo-1stclass-links)
+     ""
+     ,(ee-template0 "\
+;; Definition of the function:
+;; (find-eev \"eev-videolinks.el\" \"first-class-videos\")
+;; (find-eev \"eev-videolinks.el\" \"find-{c}video\")
+;; (find-efunction 'find-{c}video)
+
+;; Play:
+;; (find-{c}video \"0:00\")
+
+;; Index with time marks:
+;; (find-angg \".emacs.videos\" \"{c}\")
+;; http://angg.twu.net/.emacs.videos.html#{c}
+
+;; Places with more info about this video:
+;; (find-angg \".emacs.templates\" \"eev-videos-data\" \"{c}\")
+;; http://angg.twu.net/.emacs.templates.html#eev-videos-data
+;; (find-videos-intro \"1. Some videos\" \"{c}\")
+
+;; See:
+;; (find-eev \"eev-videolinks.el\" \"first-class-videos\")
+;; (find-eev \"eev-videolinks.el\" \"second-class-videos\")
+")
+     )
+   pos-spec-list))
+
+
 
 
 
